--- a/mmpe-frontend/src/assets/config.json.example
+++ b/mmpe-frontend/src/assets/config.json.example
@@ -2,13 +2,12 @@
   "myScriptApplicationKey": "yourMyScriptApplicationKey",
   "myScriptHmacKey": "yourMyScriptHmacKey",
   "myScriptLanguage": "de_DE",
-  "email_IDs": ["some@email.com"],
-  "passwords": ["somePassword"],
-  "projects":[[1]],
   "enableSpeech": true,
   "enableEyeTracking": true,
   "enableWhiteSpace": true,
   "enableSpellcheck": true,
+  "enableTouchMode": true,
+  "enableQualityEstimation":false,
   "enableHandwriting": true,
   "enableMidairGestures": true,
   "speechLanguage": "de-DE",
