--- a/mmpe-server/package.json
+++ b/mmpe-server/package.json
@@ -8,6 +8,8 @@
   "private": true,
   "dependencies": {
     "@types/node": "^12.12.24",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -18,6 +20,7 @@
     "express-secure-only": "^0.2.1",
     "express-ws": "^4.0.0",
     "ibm-watson": "^4.5.4",
+    "leapjs": "0.6.4",
     "line-reader": "^0.4.0",
     "linguee": "^1.0.1",
     "node-pty": "^0.9.0",
@@ -25,8 +28,7 @@
     "strip-ansi": "^6.0.0",
     "vcap_services": "^0.7.1",
     "watson-developer-cloud": "^4.0.1",
-    "watson-speech": "^0.36.6",
-    "leapjs": "0.6.4"
+    "watson-speech": "^0.36.6"
   },
   "browser": {
     "fs": false,
