--- a/mmpe-server/config.json.example
+++ b/mmpe-server/config.json.example
@@ -13,5 +13,6 @@
     "projects":[[1]]
   },
   "mmpePort": 3000,
-  "watsonPort": 3002
+  "watsonPort": 3002,
+  "ipeUrl": "http://localhost:8000/api/alternatives"
 }
