Add missing IPE entry in frontend config

--- a/mmpe-frontend/src/assets/config.json.example
+++ b/mmpe-frontend/src/assets/config.json.example
@@ -10,6 +10,7 @@
   "enableQualityEstimation":false,
   "enableHandwriting": true,
   "enableMidairGestures": true,
+  "enableIPE": true,
   "speechLanguage": "de-DE",
   "speechModelCustomizationID": null
 }
