--- a/nginx-mmpe.conf.template
+++ b/nginx-mmpe.conf.template
@@ -10,7 +10,7 @@ server {
         listen 80 default_server;
         listen [::]:80 default_server;
         server_name _;
-        return 302 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
 }
 
 server {
